@@ -2,20 +2,18 @@ package com.aptech.usm.cli.account;
 
 import com.aptech.usm.cli.Cli;
 
+import java.util.Collections;
 import java.util.List;
 
-public class AccountCli implements Cli {
+public class AccountCreateCli implements Cli {
     @Override
     public String getLabel() {
-        return "Tài khoản";
+        return "Tạo tài khoản";
     }
 
     @Override
     public List<Cli> getSubCli() {
-        return List.of(
-                new AccountChangePasswordCli(),
-                new AccountCreateCli()
-        );
+        return Collections.emptyList();
     }
 
     @Override
